Events and DOM manipulation

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     </head>
 
     <body>
-        <h1>Hello World!</h1>
-        <button>Click Me!</button>
+        <button id="the-button">Click Me!</button>
+
+        <img src="https://images.unsplash.com/photo-1544160207-29dbf5a614c3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60">
+
+        <script src="index-2.js"></script>
     </body>
 </html>
